# offshore-data-migrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  ML_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  ROADMAP.md  docker-compose.yml  offshore-migrator  piiguard  pyproject.toml  requirements.txt  run-with-ml.sh
.github/workflows/: ci.yml  release.yml
docs/: RESEARCH_REPORT.md
examples/: PIPL_Security_Assessment_Checklist.md  sample_data.csv  sample_data.json  sample_data.parquet  sample_data.sqlite  sample_data.tsv  sample_data.txt  sample_data.xlsx  sample_data.xml
src/cloakpii/: __init__.py  cli.py  migrate.py  pii.py  tokenize.py
src/offshore_migrator/: __init__.py  audit.py  cli.py  compliance.py  config.py  crypto.py  migrate.py  pii.py
src/piiguard/: __init__.py  __main__.py  cli.py  compliance.py  config.py  exceptions.py  integrity.py  migrate.py  pii.py  pii_ml.py  state.py
tests/: conftest.py  test_comprehensive.py  test_crypto.py  test_incremental.py  test_migrate.py  test_new_features.py  test_optimizations.py  test_pIPL_pdpa.py  test_pii.py  test_route_a.py  test_tokenize.py
